Somehow local costmap doesn't appear
- Need to investigate on the local costmap setting

--- a/roomblock_navigation/config/dwa_local_planner_params.yaml
+++ b/roomblock_navigation/config/dwa_local_planner_params.yaml
@@ -49,8 +49,8 @@ DWAPlannerROS:
 # Debugging
   publish_traj_pc : true
   publish_cost_grid_pc: true
-  global_frame_id: odom
+#  global_frame_id: odom
 
 
 # Differential-drive robot configuration - necessary?
-#  holonomic_robot: false
+  holonomic_robot: false
