--- a/roomblock_navigation/config/dwa_local_planner_params.yaml
+++ b/roomblock_navigation/config/dwa_local_planner_params.yaml
@@ -1,13 +1,13 @@
 DWAPlannerROS:
 
-# Robot Configuration Parameters - Kobuki
-  max_vel_x: 0.5  # 0.55
+  # Robot Configuration Parameters - Roomba
+  max_vel_x: 0.3
   min_vel_x: 0.0 
 
   max_vel_y: 0.0  # diff drive robot
   min_vel_y: 0.0  # diff drive robot
 
-  max_trans_vel: 0.5 # choose slightly less than the base's capability
+  max_trans_vel: 0.25 # choose slightly less than the base's capability
   min_trans_vel: 0.1  # this is the min trans velocity when there is negligible rotational velocity
   trans_stopped_vel: 0.1
 
@@ -15,11 +15,11 @@ DWAPlannerROS:
   #   do not set min_trans_vel to 0.0 otherwise dwa will always think translational velocities
   #   are non-negligible and small in place rotational velocities will be created.
 
-  max_rot_vel: 5.0  # choose slightly less than the base's capability
+  max_rot_vel: 1.5  # choose slightly less than the base's capability
   min_rot_vel: 0.4  # this is the min angular velocity when there is negligible translational velocity
   rot_stopped_vel: 0.4
   
-  acc_lim_x: 1.0 # maximum is theoretically 2.0, but we 
+  acc_lim_x: 0.8
   acc_lim_theta: 2.0
   acc_lim_y: 0.0      # diff drive robot
 
