--- a/roomblock_mapping/package.xml
+++ b/roomblock_mapping/package.xml
@@ -42,6 +42,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>sensor_msgs</build_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>gmapping</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
