--- a/roomblock_bringup/package.xml
+++ b/roomblock_bringup/package.xml
@@ -41,7 +41,10 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>create_node</build_depend>
+  <run_depend>robot_state_publisher</run_depend>
+  <run_depend>robot_pose_ekf</run_depend>
   <run_depend>create_node</run_depend>
+  <run_depend>python-serial</run_depend>
   <run_depend>rplidar_ros</run_depend>
 
 
