--- a/roomblock_description/package.xml
+++ b/roomblock_description/package.xml
@@ -42,8 +42,10 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>urdf</build_depend>
   <build_depend>xacro</build_depend>
+  <build_depend>create_description</build_depend>
   <run_depend>urdf</run_depend>
   <run_depend>xacro</run_depend>
+  <run_depend>create_description</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
