--- a/roomblock_bringup/package.xml
+++ b/roomblock_bringup/package.xml
@@ -4,53 +4,33 @@
   <version>0.0.0</version>
   <description>The roomblock_bringup package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="tajima@todo.todo">tajima</maintainer>
+  <maintainer email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</maintainer>
 
+  <license>BSD</license>
 
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>
 
-
-  <!-- Url tags are optional, but multiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/roomblock_bringup</url> -->
-
-
-  <!-- Author tags are optional, multiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintainers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-
-
-  <!-- The *_depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use run_depend for packages you need at runtime: -->
-  <!--   <run_depend>message_runtime</run_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>create_node</build_depend>
-  <run_depend>robot_state_publisher</run_depend>
-  <run_depend>robot_pose_ekf</run_depend>
-  <run_depend>create_node</run_depend>
-  <run_depend>python-serial</run_depend>
-  <run_depend>rplidar_ros</run_depend>
 
+  <run_depend>controller_manager</run_depend>
+  <run_depend>create_node</run_depend>
+  <!-- <run_depend>fake_joint_driver</run_depend> --> <!-- not releasead??? -->
+  <run_depend>image_transport</run_depend>
+  <run_depend>joy</run_depend>
+  <run_depend>python-serial</run_depend>
+  <!-- <run_depend>raspicam_node</run_depend> --> <!-- not releasead??? only raspi? -->
+  <run_depend>robot_pose_ekf</run_depend>
+  <run_depend>robot_state_publisher</run_depend>
+  <run_depend>roomblock_description</run_depend>
+  <run_depend>rplidar_ros</run_depend>
+  <run_depend>rviz</run_depend>
+  <run_depend>teleop_twist_joy</run_depend>
+
+  <test_depend>rostest</test_depend>
+  <test_depend>roslaunch</test_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
   </export>
 </package>
