--- a/roomblock_mapping/package.xml
+++ b/roomblock_mapping/package.xml
@@ -14,6 +14,7 @@
 
   <run_depend>gmapping</run_depend>
   <run_depend>hector_mapping</run_depend>
+  <run_depend>map_server</run_depend>
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>rosbag</run_depend>
   <run_depend>rviz</run_depend>
