--- a/roomblock_navigation/package.xml
+++ b/roomblock_navigation/package.xml
@@ -17,6 +17,7 @@
   <run_depend>map_server</run_depend>
   <run_depend>move_base</run_depend>
   <run_depend>rviz</run_depend>
+  <run_depend>dwa_local_planner</run_depend>
 
   <test_depend>rostest</test_depend>
   <test_depend>roslaunch</test_depend>
