--- a/roomblock_description/package.xml
+++ b/roomblock_description/package.xml
@@ -19,6 +19,7 @@
   <run_depend>rviz</run_depend>
   <run_depend>urdf</run_depend>
   <run_depend>xacro</run_depend>
+  <run_depend>create_description</run_depend>
 
   <test_depend>rostest</test_depend>
   <test_depend>roslaunch</test_depend>
